fixed the layout problem by adding div container. also made 2 separate media queries

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@
   font-style: normal;
 }
 
+/*main*/
+main {
+  background-color: var(--light-grayish-blue);
+}
+
 /* Header and paragraph basic styling*/
 h2 {
   font-family: "Barlow Semi Condensed", sans-serif;
@@ -139,16 +144,20 @@ p {
   line-height: 150%;
 }
 
-@media only screen and (min-width: 700px) {
-  body {
+@media only screen and (min-width: 800px) {
+  main {
     height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
+
   .container {
-    grid-template-columns: repeat(4, minmax(100px, 20%));
-    grid-template-rows: minmax(100px, 30%) minmax(100px, 30%);
-    padding-top: 10rem;
-    padding-left: 10rem;
-    height: 90%;
+    grid-template-columns: repeat(3, minmax(100px, 25%));
+    grid-template-rows: repeat(2, minmax(100px, 50%));
+    margin: auto;
+    justify-content: center;
   }
 
   .card1 {
@@ -167,6 +176,20 @@ p {
   .card4 {
     grid-column: 2 /4;
     grid-row: 2;
+  }
+
+  .card5 {
+    grid-column: 1 /4;
+    grid-row: 3;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .container {
+    grid-template-columns: repeat(4, minmax(100px, 19%));
+    grid-template-rows: minmax(100px, 50%) minmax(100px, 50%);
+    margin: auto;
+    justify-content: center;
   }
 
   .card5 {
